# twitch-auto-opener

./: .gitignore  README.md  build_for_windows_on_wsl.ps1  config.sample.toml  mise.toml  pyproject.toml
scripts/: build_windows_on_wsl.sh
src/twitch_auto_opener/: __init__.py  __main__.py  chat_recorder.py  chrome_launcher.py  config.py  irc_client.py  main.py  monitor.py  recorder.py  single_instance.py  startup.py  twitch_client.py  upload_history.py  upload_queue.py  upload_state.py  youtube_auth.py  youtube_template.py  youtube_uploader.py
